--- a/canonizador.ipynb
+++ b/canonizador.ipynb
@@ -52,6 +52,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -233,20 +242,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = NLPDataset(data)"
+    "data = data.sample(len(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataloader = DataLoader(dataset, batch_size=BATCH_SIZE, shuffle=True, num_workers=0)"
+    "train = data[:int(0.99 * data.shape[0])]\n",
+    "val = data[int(0.99 * data.shape[0]):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_train = NLPDataset(train)\n",
+    "dataset_val = NLPDataset(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader_train = DataLoader(dataset_train, batch_size=BATCH_SIZE, shuffle=True, num_workers=4)\n",
+    "dataloader_val = DataLoader(dataset_val, shuffle=False, num_workers=4)"
    ]
   },
   {
@@ -385,20 +415,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "seq2seq = Seq2SeqAtt(null_token=null_token, start_token=start_token, end_token=end_token,\n",
     "                     encoder_vocab_size=len(input_tokenizer.get_vocab()),\n",
-    "                     decoder_vocab_size=len(input_tokenizer.get_vocab()), \n",
+    "                     decoder_vocab_size=len(output_tokenizer.get_vocab()), \n",
     "                     wordvec_dim=48, hidden_dim=64, rnn_num_layers=1,\n",
     "                     rnn_dropout=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +469,7 @@
    "source": [
     "for epoch in range(EPOCHS):\n",
     "    seq2seq.train()\n",
-    "    for batch in dataloader:\n",
+    "    for batch in dataloader_train:\n",
     "        input_data = batch['input']\n",
     "        output_data = batch['output']\n",
     "        \n",
@@ -450,18 +480,27 @@
     "        y = padding_tensor(y)\n",
     "        \n",
     "        loss = seq2seq(x, y)\n",
+    "        print(\"\\t{0}\".format(loss.data.item()))\n",
     "        loss.backward()\n",
     "        \n",
     "        optimizer.step()\n",
-    "        optimizer.zero_grad()"
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "    seq2seq.eval()\n",
+    "    with torch.no_grad():\n",
+    "        for batch in dataloader_eval:\n",
+    "            input_data = batch['input']\n",
+    "            output_data = batch['output']\n",
+    "        \n",
+    "            x = [torch.tensor(row.ids) for row in input_tokenizer.encode_batch(input_data)]\n",
+    "            y = [torch.tensor(row.ids) for row in output_tokenizer.encode_batch(output_data)]\n",
+    "        \n",
+    "            x = padding_tensor(x)\n",
+    "            y = padding_tensor(y)\n",
+    "        \n",
+    "            loss = seq2seq(x, y)\n",
+    "            print(\"\\t{0}\".format(loss.data.item()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
