--- a/canonizador.ipynb
+++ b/canonizador.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,11 +53,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -76,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,11 +125,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "null_token =  input_tokenizer.get_vocab()['<pad>']\n",
+    "null_input_token =  input_tokenizer.get_vocab()['<pad>']\n",
+    "null_output_token =  output_tokenizer.get_vocab()['<pad>']\n",
     "start_token = output_tokenizer.get_vocab()['<start>']\n",
     "end_token = output_tokenizer.get_vocab()['<end>']"
    ]
@@ -125,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +162,7 @@
        "['impressora hp laser', 'estetoscopio', 'painel para tv quarto']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +173,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def padding_tensor(sequences, null_id):\n",
+    "    num = len(sequences)\n",
+    "    max_len = max([s.shape[0] for s in sequences])\n",
+    "    out_dims = (num, max_len, *sequences[0].shape[1:])\n",
+    "    out_tensor = sequences[0].data.new(*out_dims).fill_(null_id)   \n",
+    "    for i, tensor in enumerate(sequences):\n",
+    "        length = tensor.size(0)\n",
+    "        out_tensor[i, :length] = tensor\n",
+    "    return out_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +227,7 @@
     "        return F.softmax(attn_energies, dim=2)\n",
     "\n",
     "    def score(self, hidden, encoder_outputs):\n",
-    "        energy = F.tanh(self.attn(torch.cat([hidden, encoder_outputs], 2))) # [B*T*2H]->[B*T*H]\n",
+    "        energy = torch.tanh(self.attn(torch.cat([hidden, encoder_outputs], 2))) # [B*T*2H]->[B*T*H]\n",
     "        energy = energy.transpose(2,1) # [B*H*T]\n",
     "        v = self.v.repeat(encoder_outputs.data.shape[0],1).unsqueeze(1) #[B*1*H]\n",
     "        energy = torch.bmm(v, energy) # [B*1*T]\n",
@@ -207,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,11 +451,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq2seq = Seq2SeqAtt(null_token=null_token, start_token=start_token, end_token=end_token,\n",
+    "seq2seq = Seq2SeqAtt(null_token=null_input_token, start_token=start_token, end_token=end_token,\n",
     "                     encoder_vocab_size=len(input_tokenizer.get_vocab()),\n",
     "                     decoder_vocab_size=len(output_tokenizer.get_vocab()), \n",
     "                     wordvec_dim=48, hidden_dim=64, rnn_num_layers=1,\n",
@@ -428,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,47 +482,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def padding_tensor(sequences):\n",
-    "    num = len(sequences)\n",
-    "    max_len = max([s.shape[0] for s in sequences])\n",
-    "    out_dims = (num, max_len, *sequences[0].shape[1:])\n",
-    "    out_tensor = sequences[0].data.new(*out_dims).fill_(1)   \n",
-    "    for i, tensor in enumerate(sequences):\n",
-    "        length = tensor.size(0)\n",
-    "        out_tensor[i, :length] = tensor\n",
-    "    return out_tensor"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/31950 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 333/31950 [01:26<2:14:50,  3.91it/s]"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(EPOCHS):\n",
+    "    print(\"Epoch\", epoch)\n",
     "    seq2seq.train()\n",
-    "    for batch in dataloader_train:\n",
+    "    train_loss = []\n",
+    "    for batch in tqdm(dataloader_train):\n",
     "        input_data = batch['input']\n",
     "        output_data = batch['output']\n",
     "        \n",
     "        x = [torch.tensor(row.ids) for row in input_tokenizer.encode_batch(input_data)]\n",
     "        y = [torch.tensor(row.ids) for row in output_tokenizer.encode_batch(output_data)]\n",
     "        \n",
-    "        x = padding_tensor(x)\n",
-    "        y = padding_tensor(y)\n",
+    "        x = padding_tensor(x, null_input_token)\n",
+    "        y = padding_tensor(y, null_output_token)\n",
     "        \n",
     "        loss = seq2seq(x, y)\n",
-    "        print(\"\\t{0}\".format(loss.data.item()))\n",
+    "        train_loss.append(loss.data.item())\n",
     "        loss.backward()\n",
     "        \n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
+    "    print(\"\\tTrain loss: {0}\".format(np.mean(train_loss)))\n",
     "        \n",
     "    seq2seq.eval()\n",
+    "    val_loss = []\n",
     "    with torch.no_grad():\n",
     "        for batch in dataloader_eval:\n",
     "            input_data = batch['input']\n",
@@ -495,12 +540,21 @@
     "            x = [torch.tensor(row.ids) for row in input_tokenizer.encode_batch(input_data)]\n",
     "            y = [torch.tensor(row.ids) for row in output_tokenizer.encode_batch(output_data)]\n",
     "        \n",
-    "            x = padding_tensor(x)\n",
-    "            y = padding_tensor(y)\n",
+    "            x = padding_tensor(x, null_input_token)\n",
+    "            y = padding_tensor(y, null_output_token)\n",
     "        \n",
     "            loss = seq2seq(x, y)\n",
-    "            print(\"\\t{0}\".format(loss.data.item()))"
+    "            val_loss.append(loss.data.item())\n",
+    "    print(\"\\tVal loss: {0}\".format(np.mean(val_loss)))\n",
+    "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
