--- a/canonizador.ipynb
+++ b/canonizador.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import Dataset, DataLoader"
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,11 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from seq2seq_attn import (NLPDataset, Seq2SeqAtt)"
+    "from seq2seq_attn import (NLPDataset, Seq2SeqAtt, collate_fn_padd)"
    ]
   },
   {
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,22 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_train = NLPDataset(train, null_input_token, null_output_token)\n",
-    "dataset_val = NLPDataset(val, null_input_token, null_output_token)"
+    "dataset_train = NLPDataset(train, input_tokenizer, output_tokenizer)\n",
+    "dataset_val = NLPDataset(val, input_tokenizer, output_tokenizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataloader_train = DataLoader(dataset_train, batch_size=BATCH_SIZE, shuffle=True, num_workers=4)\n",
-    "dataloader_val = DataLoader(dataset_val, shuffle=False, num_workers=4)"
+    "dataloader_train = DataLoader(dataset_train, batch_size=BATCH_SIZE, shuffle=True,\n",
+    "                              num_workers=0, collate_fn=collate_fn_padd)\n",
+    "dataloader_val = DataLoader(dataset_val, shuffle=False, num_workers=0, collate_fn=collate_fn_padd)"
    ]
   },
   {
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,13 +263,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 46%|████▌     | 14580/31950 [59:26<1:16:52,  3.77it/s]"
+      "  0%|          | 50/31950 [00:32<6:12:55,  1.43it/s]"
      ]
     }
    ],
    "source": [
+    "best_loss = float(\"inf\")\n",
     "for epoch in range(EPOCHS):\n",
     "    print(\"Epoch\", epoch)\n",
+    "    \n",
     "    seq2seq.train()\n",
     "    train_loss = []\n",
     "    for batch in tqdm(dataloader_train):\n",
@@ -289,11 +292,91 @@
     "        for batch in dataloader_eval:\n",
     "            x = batch['input']\n",
     "            y = batch['output']\n",
-    "        \n",
+    "            \n",
     "            loss = seq2seq(x, y)\n",
     "            val_loss.append(loss.data.item())\n",
-    "    print(\"\\tVal loss: {0}\".format(np.mean(val_loss)))\n",
+    "    val_loss = np.mean(val_loss)\n",
+    "            \n",
+    "    if val_loss < best_loss:\n",
+    "        best_loss = val_loss\n",
+    "        torch.save('seq2seq.pt')\n",
+    "    \n",
+    "    print(\"\\tVal loss: {0}\".format(val_loss))\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6) Avaliação do output do modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = data.query_string.tolist()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.tensor(input_tokenizer.encode(x).ids).unsqueeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "decoding = []\n",
+    "for token in seq2seq.sample(x):\n",
+    "    if isinstance(token, int):\n",
+    "        token = torch.tensor(token)\n",
+    "    decoding.append(token.item())    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_tokenizer.decode(decoding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.output.tolist()[0]"
    ]
   }
  ],
