--- a/canonizador.ipynb
+++ b/canonizador.ipynb
@@ -24,8 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tokenizers.implementations import ByteLevelBPETokenizer\n",
-    "from tokenizers.processors import BertProcessing"
+    "from tokenizers import Tokenizer"
    ]
   },
   {
@@ -34,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import DataLoader"
+    "from tokenizers.implementations import ByteLevelBPETokenizer\n",
+    "from tokenizers.processors import BertProcessing"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split"
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm"
+    "import numpy as np"
    ]
   },
   {
@@ -70,7 +70,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from seq2seq_attn import (NLPDataset, Seq2SeqAtt, collate_fn_padd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tokenizers import Tokenizer, pre_tokenizers, normalizers, decoders, models, processors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tokenizer import Tokenizer as Tokenize"
    ]
   },
   {
@@ -89,13 +116,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_tokenizer = ByteLevelBPETokenizer(\n",
-    "    \"./canonizador_tokenizer-vocab.json\",\n",
-    "    \"./canonizador_tokenizer-merges.txt\"\n",
+    "input_tokenizer = Tokenizer(models.BPE(\n",
+    "  vocab=\"./input_tokenizer-vocab.json\", \n",
+    "  merges=\"./input_tokenizer-merges.txt\"\n",
+    "))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_tokenizer.normalizer = normalizers.Lowercase()\n",
+    "input_tokenizer.pre_tokenizer = pre_tokenizers.ByteLevel(add_prefix_space=True)\n",
+    "input_tokenizer.decoder = decoders.ByteLevel()\n",
+    "input_tokenizer.post_processor = BertProcessing(\n",
+    "  sep=(\"<end>\", input_tokenizer.token_to_id(\"<end>\")),\n",
+    "  cls=(\"<start>\", input_tokenizer.token_to_id(\"<start>\")),\n",
     ")"
    ]
   },
@@ -108,26 +150,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_tokenizer = ByteLevelBPETokenizer(\n",
-    "    \"./output_canonizador_tokenizer-vocab.json\",\n",
-    "    \"./output_canonizador_tokenizer-merges.txt\"\n",
-    ")"
+    "special_tokens = [\"<start>\", \"<pad>\", \"<end>\", \"<unk>\", \"<mask>\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_tokenizer = Tokenize(files='../data/output.txt', mode='word_level', checker='output',\n",
+    "                      special_tokens=special_tokens, max_length=10, tokenizer='./tokenizer_output.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "null_input_token =  input_tokenizer.get_vocab()['<pad>']\n",
-    "null_output_token =  output_tokenizer.get_vocab()['<pad>']\n",
-    "start_token = output_tokenizer.get_vocab()['<start>']\n",
-    "end_token = output_tokenizer.get_vocab()['<end>']"
+    "null_output_token =  output_tokenizer.get_vocab['<pad>']\n",
+    "start_token = output_tokenizer.get_vocab['<start>']\n",
+    "end_token = output_tokenizer.get_vocab['<end>']"
    ]
   },
   {
@@ -139,11 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_json('../data/final_df.json')"
+    "data = pd.read_json('../data/final_df.json')\n",
+    "data.output = data.output.apply(lambda x: x.replace('/', ' '))"
    ]
   },
   {
@@ -155,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,17 +223,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = data[:int(0.99 * data.shape[0])]\n",
-    "val = data[int(0.99 * data.shape[0]):]"
+    "train = data[:int(0.999 * data.shape[0])]\n",
+    "val = data[int(0.999 * data.shape[0]):]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1289595, 1291)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train), len(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,13 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataloader_train = DataLoader(dataset_train, batch_size=BATCH_SIZE, shuffle=True,\n",
-    "                              num_workers=0, collate_fn=collate_fn_padd)\n",
-    "dataloader_val = DataLoader(dataset_val, shuffle=False, num_workers=0, collate_fn=collate_fn_padd)"
+    "                              num_workers=3, collate_fn=collate_fn_padd)\n",
+    "dataloader_val = DataLoader(dataset_val, batch_size=len(val), shuffle=False, num_workers=3,\n",
+    "                            collate_fn=collate_fn_padd)"
    ]
   },
   {
@@ -211,20 +282,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "seq2seq = Seq2SeqAtt(null_token=null_input_token, start_token=start_token, end_token=end_token,\n",
     "                     encoder_vocab_size=len(input_tokenizer.get_vocab()),\n",
-    "                     decoder_vocab_size=len(output_tokenizer.get_vocab()), \n",
+    "                     decoder_vocab_size=len(output_tokenizer.get_vocab), \n",
     "                     wordvec_dim=48, hidden_dim=64, rnn_num_layers=1,\n",
     "                     rnn_dropout=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,11 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EPOCHS = 5"
+    "EPOCHS = 10"
    ]
   },
   {
@@ -249,7 +320,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/31950 [00:00<?, ?it/s]"
+      "  0%|          | 0/32240 [00:00<?, ?it/s]"
      ]
     },
     {
@@ -263,7 +334,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 50/31950 [00:32<6:12:55,  1.43it/s]"
+      "  2%|▏         | 565/32240 [02:18<2:02:43,  4.30it/s]"
      ]
     }
    ],
@@ -287,19 +358,18 @@
     "    print(\"\\tTrain loss: {0}\".format(np.mean(train_loss)))\n",
     "        \n",
     "    seq2seq.eval()\n",
-    "    val_loss = []\n",
+    "    val_loss = None\n",
     "    with torch.no_grad():\n",
-    "        for batch in dataloader_eval:\n",
+    "        for batch in tqdm(dataloader_val):\n",
     "            x = batch['input']\n",
     "            y = batch['output']\n",
     "            \n",
     "            loss = seq2seq(x, y)\n",
-    "            val_loss.append(loss.data.item())\n",
-    "    val_loss = np.mean(val_loss)\n",
-    "            \n",
+    "            val_loss = loss.data.item()\n",
+    "                \n",
     "    if val_loss < best_loss:\n",
     "        best_loss = val_loss\n",
-    "        torch.save('seq2seq.pt')\n",
+    "        torch.save(seq2seq, 'seq2seq.pt')\n",
     "    \n",
     "    print(\"\\tVal loss: {0}\".format(val_loss))\n",
     "    print()"
@@ -336,7 +406,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = torch.tensor(input_tokenizer.encode(x).ids).unsqueeze(0)"
+    "tokens = input_tokenizer.encode(x).ids"
    ]
   },
   {
@@ -345,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x"
+    "tokens"
    ]
   },
   {
@@ -355,8 +425,8 @@
    "outputs": [],
    "source": [
     "decoding = []\n",
-    "for token in seq2seq.sample(x):\n",
-    "    if isinstance(token, int):\n",
+    "for token in seq2seq.sample(torch.tensor(tokens).unsqueeze(0)):\n",
+    "    if isinstance(token, int):    \n",
     "        token = torch.tensor(token)\n",
     "    decoding.append(token.item())    "
    ]
